deb/openmediavault/workbench/src/app/shared/components/alert-panel/alert-panel.component.scss
@use 'scss/theme/colors' as tc;

.mat-mdc-card {
  &.alert-info {
    @include tc.background-color-pair('info');
  }

  &.alert-success {
    @include tc.background-color-pair('success');
  }

  &.alert-warning {
    @include tc.background-color-pair('warning');
  }

  &.alert-error {
    @include tc.background-color-pair('error');
  }

  &.alert-tip {
    @include tc.background-color-pair('tip');
  }

  .mat-icon.alert-icon {
    margin-right: 16px;
  }

  .content-wrapper {
    overflow: hidden;

    & .mat-mdc-card-title {
      overflow: hidden;
      text-overflow: ellipsis;
      line-height: normal;
    }

    & .mat-mdc-card-content {
      margin-bottom: 0;
    }
  }

  .mat-mdc-card-actions {
    margin: 0 0 0 16px;
    padding: 0;

    .alert-action-button {
      margin: 0;
    }
  }
}

